fix:Fix the problem of not showing the blur loading effect

--- a/shopping-cart/src/input.css
+++ b/shopping-cart/src/input.css
@@ -62,7 +62,7 @@ input.no-spinner::-webkit-inner-spin-button {
 }
 
 .container {
-    @apply px-2;
+    @apply mx-2;
 }
 
 .input-category:checked~div {
